# Christians-Steam-Bot

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CPack.cmake  Christians-Steam-Bot.sln  Docs.md  MakeDebianPackage.sh  README.md  vcpkg.json
.github/: MakeRelease.txt
.github/workflows/: build-dummy.yaml  build-linux.yaml  build-windows.yaml  release.yaml
Christian/: Build.bat  Run.bat  Setup.bat
Christians-Steam-Bot/: .gitignore  Christians-Steam-Bot.vcxproj  Christians-Steam-Bot.vcxproj.filters
Christians-Steam-Bot/Headers/UI/: CLI.hpp  Command.hpp  Table.hpp
Christians-Steam-Bot/Sources/: Asan.cpp  Main.cpp
Christians-Steam-Bot/Sources/UI/: Command.cpp
Christians-Steam-Bot/Sources/UI/Console/: Console.cpp  Console.hpp  GetLine.hpp  GetLine_Linux.cpp  GetLine_Linux.hpp  Manager_Linux.cpp  Table.cpp
Christians-Steam-Bot/Sources/UI/Console/CLI/: CLI.cpp  Helpers.cpp  Helpers.hpp
Christians-Steam-Bot/Sources/UI/Console/CLI/Commands/: AcceptTrade.cpp  AddLicense.cpp  Create.cpp  CreateAddRemoveGroup.cpp  DiscoveryQueue.cpp  Exit.cpp  HandleTrade.cpp  Help.cpp  Launch.cpp  ListCloud.cpp  ListFiles.cpp  ListGames.cpp  ListGroups.cpp  ListInventory.cpp  ListTradeOffers.cpp  LoadURL.cpp  PlayStopGame.cpp  Quit.cpp  SaleEvent.cpp  SaleQueue.cpp  SaleSticker.cpp  Select.cpp  SendInventory.cpp  Settings.cpp  ShowLicense.cpp  Stats.cpp  Status.cpp  StopStream.cpp  ViewStream.cpp
